<resources>
    <string name="app_name">AppSpyCheat</string>
    <string name="name_app">SpyCheat</string>

    <!-- BUTTON -->
    <string name="creer_une_reunion">CREATION</string>
    <string name="connexion_reunion">CONNEXION</string>
    <string name="connexion_serveur">CONNEXION SERVEUR</string>
    <string name="quitter">QUITTER</string>
    <string name="envoyer">ENVOYER</string>
    <string name="tete">TÊTE</string>
    <string name="main">MAIN</string>
    <string name="valider">VALIDER</string>
    <string name="start">COMMENCER</string>

    <!-- GRPC -->
    <string name="host">Adresse IP</string>
    <string name="port">Port (facultatif)</string>

    <!-- Page option -->
    <string name="choississez_votre_option">Sélectionner l\'emplacement de\n votre téléphone</string>

    <!-- Page d'acceuil -->
    <string name="spycheat">SpyCheat</string>
    <string name="serveur">Saisissez l\'adresse IP et le port du réseau\n pour vous connecter au serveur</string>
    <string name="bienvenu">Bienvenue sur SpyCheat\nQue souhaitez-vous faire ?</string>

    <!-- Inscription -->
    <string name="inscription">Donner un nom à votre réunion\nAjouter l\'adresse mail d\'un utilisateur\nCliquer sur ENVOYER\nRecommencer ou Quitter</string>
    <string name="nomR">Réunion</string>
    <string name="mail">Mail</string>

    <!-- Connexion -->
    <string name="connexion">Bienvenue sur SpyCheat\nSaisissez le nom de la réunion ainsi que votre mail</string>
</resources>